--- a/assets/src/styles/nav.scss
+++ b/assets/src/styles/nav.scss
@@ -21,7 +21,7 @@ nav a {
 
 	a{
 		margin: 0 .5em;
-		padding: 1em .5em 0;
+		padding: .5em;
 		color: #b5b5b5;
 		transition: color .2s, line-height .2s;
 		line-height: $logo-height-small;
