--- a/assets/src/styles/helpers.scss
+++ b/assets/src/styles/helpers.scss
@@ -1,5 +1,5 @@
 .btn{
-	padding: 7px 12px;
+	padding: .8em 2em;
 	font-size: .9em;
 	box-sizing: border-box;
 	display: inline-block;
@@ -12,7 +12,10 @@
 	color: #fff;
 	background: url(/assets/dist/gfx/wild-sea.jpg) fixed 0 80% #436068;
 }
-.btn:hover{
+.btn:hover,
+.btn:focus{
 	color: #fff;
+	background: $highlight;
 	cursor: pointer;
+	outline: none;
 }
