--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -28,6 +28,7 @@ body {
 .mast{
 	background: url(/assets/dist/gfx/wild-sea.jpg) #222;
 	background-position: 80% 0;
+	z-index: 100;
 
 	@media #{$respond-medium} {
 		position: fixed;
@@ -39,6 +40,11 @@ body {
 		display: block;
 		text-align: center;
 		overflow: hidden;
+		
+		@media #{$respond-tiny} {
+			height: 2em;
+			padding: 1em 0;
+		}
 
 		@media #{$respond-small} {
 			height: 100%;
@@ -101,7 +107,8 @@ body {
 
 .foot{
 	font-size: .9em;
-
+	text-align: center;
+	
 	a{
 		color: $link-hover;
 		text-decoration: none;
@@ -114,8 +121,26 @@ body {
 		.copyright{
 			float: left;
 		}
-		.technology{
+	}
+	.technology{
+
+		span{
+			display: block;
+		}
+		@media #{$respond-medium} {
 			float: right;
+			span{
+				display: inline;
+				margin-left: 1em;
+			}
+			span:after{
+				content: '/';
+				margin: 0 0 0 1em;
+				opacity: .5;
+			}
+			span:last-of-type:after{
+				content: none;
+			}
 		}
 	}
 }
@@ -124,19 +149,38 @@ body {
 	Home
 */
 .intro{
-	background-image: url(/assets/dist/gfx/mist.jpg);
-	background-position: 50%;
-	background-size: cover;
-	color: #111;
+	color: #fff;
 	text-align: center;
-	padding-top: 3em;
+	position: relative;
+	
+	@media #{$respond-medium} {
+		background-image: url(/assets/dist/gfx/corn.jpg);
+		background-position: center 40%;
+		background-size: cover;
+		color: #fff;
+		min-height: 360px;
+		padding-top: 180px;
+	}
 
 	.row{
-		@media #{$respond-large} {
-			min-height: 700px;		
-			padding-top: 10em;
+		@media #{$respond-tiny} {
+			padding-top: 0;
 		}
 	} 
+	
+	@media #{$respond-medium} {
+		h1{
+			animation-name: fadeIn;
+			animation-duration: 1.5s;
+			animation-delay: .5s;
+		}
+
+		p{
+			animation-name: fadeIn;
+			animation-duration: 1.2s;
+			animation-delay: .8s;
+		}
+	}
 }
 
 /*
