--- a/assets/src/styles/print.scss
+++ b/assets/src/styles/print.scss
@@ -1,5 +1,4 @@
 /* Print styles */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import 'variables';
+@import 'animations';
 @import 'normalise';
-@import 'main';
-@import 'nav';
