--- a/assets/src/styles/variables.scss
+++ b/assets/src/styles/variables.scss
@@ -1,9 +1,11 @@
 $base-height: 24px;
-$link-hover: #f54121;
+$highlight: #f54121;
+$link-hover: $highlight;
 $logo-height-small: 30px;
 $logo-height-medium: 45px;
 $logo-height-large: 60px;
 
+$respond-tiny: "screen and (max-width: 420px)";
 $respond-small: "screen and (min-width: 420px)";
 $respond-medium: "screen and (min-width: 700px)";
 $respond-large: "screen and (min-width: 1000px)";
