--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -251,6 +251,10 @@ body {
 	h2{
 		margin-bottom: ($base-height/2);
 		font-size: 1.1em;
+		color: $highlight;
+	}
+	p{
+		font-size: .85em;
 	}
 
 	a{
@@ -262,22 +266,22 @@ body {
 		right: 0;
 		bottom: 0;
 		background: #f8f8f8;
-		background: rgba(250, 250, 250, 0.95);
+		background: rgba(28, 35, 46, 0.97);
 		opacity: 0;
 		transition: opacity .3s;
 
 		&:hover{
-			color: #333;
+			color: #fff;
 			opacity: 1;
 
 			h2{
 				animation-name: fadeIn;
-				animation-duration: .7s;
+				animation-duration: .4s;
 			}
 			p{
 				animation-name: fadeIn;
-				animation-duration: .7s;
-				animation-delay: .2s;
+				animation-duration: .4s;
+				animation-delay: .1s;
 			}
 		}
 		@media #{$respond-medium}{
@@ -316,5 +320,46 @@ body {
 			margin-right: 1em;
 			color: #999;
 		} 
+	}
+}
+
+/*
+	Music
+*/
+.music-tracks{
+	.loading{
+		text-align: center;
+		padding: 1em 0;
+	}
+	ul{
+		list-style: none;
+		padding: 0;
+		margin: 0;
+	}
+	li{
+		overflow: hidden;
+		border-top: 1px solid #ddd;
+		padding-top: 1em;
+		margin-bottom: 1em;
+	}
+	a{
+		text-decoration: none;
+	}
+	img{
+		float: left;
+		margin: 0 1em 0 0;
+	}
+	.trackname{
+		display: block;
+	}
+	.trackartist{
+		font-size: .9em;
+	}
+
+	@media #{$respond-tiny}{
+		img{
+			width: 80px;
+			height: auto;
+		}
 	}
 }
