Adding a display-list helper to unify list styling

--- a/assets/src/styles/helpers.scss
+++ b/assets/src/styles/helpers.scss
@@ -19,3 +19,16 @@
 	cursor: pointer;
 	outline: none;
 }
+
+ul.display-list{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+
+	li{
+		overflow: hidden;
+		border-top: 1px solid #ddd;
+		padding-top: 1em;
+		margin-bottom: 1em;
+	}
+}
