--- a/assets/src/styles/normalise.scss
+++ b/assets/src/styles/normalise.scss
@@ -445,3 +445,17 @@ td,
 th {
     padding: 0;
 }
+
+/* Bits
+=========================================================================== */
+pre{
+    max-width: 700px;
+    margin: 15px 0;
+    padding: 10px 20px;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    font-size: 13px;
+    line-height: 19px;
+    overflow: auto;
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+}
