--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -404,3 +404,17 @@ ul.sitemap{
 		}
 	}
 }
+
+.video-container{
+	padding-top: 56.22%;
+	position: relative;
+	margin-bottom: $base-height;
+	
+	iframe{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
