--- a/assets/src/styles/helpers.scss
+++ b/assets/src/styles/helpers.scss
@@ -23,7 +23,8 @@
 ul.display-list{
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 $base-height;
+	border-bottom: 1px solid #ddd;
 
 	li{
 		overflow: hidden;
