--- a/assets/src/styles/helpers.scss
+++ b/assets/src/styles/helpers.scss
@@ -8,9 +8,9 @@
 	line-height: 1.1;
 	margin: 0 .2em;
 	border: none;
-    border-radius: 4px;
+	border-radius: 4px;
 	color: #fff;
-	background: url(/assets/dist/gfx/wild-sea.jpg) fixed 0 80% #436068;
+	background: #24292d;
 }
 .btn:hover,
 .btn:focus{
