--- a/assets/src/styles/nav.scss
+++ b/assets/src/styles/nav.scss
@@ -20,13 +20,13 @@ nav a {
 	}
 
 	a{
-		margin: 0 .5em;
 		padding: .5em;
 		color: #b5b5b5;
 		transition: color .2s, line-height .2s;
 		line-height: $logo-height-small;
 
 		@media #{$respond-medium} {
+			margin: 0 .5em;
 			line-height: $logo-height-medium;
 		}
 
@@ -113,3 +113,20 @@ nav.extra{
 	}
 }
 
+.pagination{
+	text-align: center;
+
+	a{
+		background: #fff;
+		background: linear-gradient(top, #fff, #f5f5f5);
+		border-radius: 3px;
+		padding: 3px 10px;
+		border: 1px solid #d9d9d9;
+		border-top-color: #eee;
+		border-bottom-color: #ccc;
+		box-shadow: 0 3px 5px rgba(0, 0, 0, 0.14);
+		text-decoration: none;
+		margin: 0 .5em;
+		display: inline-block;
+	}
+}
