--- a/assets/src/styles/forms.scss
+++ b/assets/src/styles/forms.scss
@@ -1,7 +1,7 @@
 form.standard{
 
 	.field{
-		margin: $base-height 0;
+		margin: 0 0 $base-height;
 		overflow: hidden;
 
 		label{
@@ -14,13 +14,12 @@ form.standard{
 		textarea,
 		select{
 			width: 100%;
-			border: 1px solid #ccc;
-			box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
-			padding: .35em .2em;
+			border: 2px solid #ccc;
+			border-radius: 2px;
+			padding: .5em;
 
 			&:focus{
 				border-color: $highlight;
-				box-shadow: inset 0 1px 3px rgba($highlight, 0.4);
 				outline: none;
 			}
 		}
@@ -62,13 +61,28 @@ form.standard{
 		left: 10%;
 	}
 }
+@media #{$respond-small}{
+	form.contact{
+		.field-contactname,
+		.field-email{
+			width: 48%;
+			float: left;
+		}
+		.field-email{
+			margin-left: 4%;
+		}
+		.field-subject{
+			clear: left;
+		}
+	}
+}
 
 form.search{
 	position: relative;
 	margin: 0 0 $base-height;
 	.input input{
 		padding-right: 100px;
-		height: 30px;
+		height: 40px;
 		border-radius: 3px;
 		padding-top: 5px;
 		padding-bottom: 5px;
@@ -76,7 +90,7 @@ form.search{
 	input[type=submit]{
 		@extend .btn;
 		width: 100px;
-		height: 30px;
+		height: 40px;
 		padding-top: 5px;
 		padding-bottom: 5px;
 		border-radius: 0 3px 3px 0;
