--- a/assets/src/styles/normalise.scss
+++ b/assets/src/styles/normalise.scss
@@ -24,6 +24,18 @@ html {
 
 body {
     margin: 0;
+    font-size: $base-font-size;
+    font-family: Lato, "Gill sans", sans-serif;
+    line-height: 1.5;
+}
+
+h1, .h1 {
+    font-size: 2.6em;
+    font-weight: lighter;
+}
+
+h2, .h2{
+    font-size: 1.9em;
 }
 
 /* HTML5 display definitions
@@ -142,16 +154,6 @@ strong {
 
 dfn {
     font-style: italic;
-}
-
-/**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari, and Chrome.
- */
-
-h1 {
-    font-size: 2.5em;
-    font-weight: lighter;
 }
 
 /**
