--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -2,8 +2,6 @@ body {
 	background: url(/assets/dist/gfx/wild-sea.jpg) #222;
 	background-position: 80% 0;
 	color: #ccc;
-	font-family: Lato, "Gill sans", sans-serif;
-	line-height: 1.4;
 	padding: 0;
 
 	@media #{$respond-medium} {
@@ -222,7 +220,7 @@ body {
 	position: relative;
 	padding: .5em;
 	box-sizing: border-box;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 
 	@media screen and (min-width: 550px){
 		width: 48%;
@@ -252,7 +250,7 @@ body {
 	h2{
 		margin-bottom: ($base-height/2);
 		font-size: 1.1em;
-		color: $highlight;
+		color: #444;
 	}
 	p{
 		font-size: .85em;
@@ -266,13 +264,13 @@ body {
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: #f8f8f8;
-		background: rgba(28, 35, 46, 0.97);
+		background: #eee;
+		background: rgba(255, 255, 255, 0.95);
 		opacity: 0;
 		transition: opacity .3s;
 
 		&:hover{
-			color: #fff;
+			color: #888;
 			opacity: 1;
 
 			h2{
