--- a/assets/src/styles/forms.scss
+++ b/assets/src/styles/forms.scss
@@ -1,4 +1,5 @@
 form.standard{
+	max-width: 700px;
 
 	.field{
 		margin: 0 0 $base-height;
@@ -14,7 +15,7 @@ form.standard{
 		textarea,
 		select{
 			width: 100%;
-			border: 2px solid #ccc;
+			border: 1px solid #B8C8CE;
 			border-radius: 2px;
 			padding: .5em;
 
@@ -63,6 +64,7 @@ form.standard{
 }
 @media #{$respond-small}{
 	form.contact{
+		margin: 0 auto;
 		.field-contactname,
 		.field-email{
 			width: 48%;
