--- a/assets/src/styles/normalise.scss
+++ b/assets/src/styles/normalise.scss
@@ -1,7 +1,7 @@
 h1, h2, h3, h4, h5, h6, hgroup
 ul, ol, dl
-blockqupte, p, address,
-table, feildset, figure, pre{
+blockquote, p, address,
+table, fieldset, figure, pre{
   margin: 0;
   margin-bottom: $base-height;
 }
