--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -132,7 +132,7 @@ body {
 	transition: min-height 1s, padding-top 1s;
 
 	@media #{$respond-medium} {
-		background-image: url(/assets/dist/gfx/corn.jpg);
+		background-image: url(/assets/dist/gfx/lake.jpg);
 		background-position: center 40%;
 		background-size: cover;
 		color: #fff;
