--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -197,9 +197,12 @@ body {
 	float: none;
 	margin: 1em auto 0;
 	position: relative;
-	padding: .5em;
+	padding: 4px;
 	box-sizing: border-box;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+	background: #fff;
+	border-radius: 4px;
+	overflow: hidden;
 
 	@media screen and (min-width: 550px){
 		width: 48%;
@@ -247,6 +250,7 @@ body {
 		background: rgba(255, 255, 255, 0.95);
 		opacity: 0;
 		transition: opacity .3s;
+		border-radius: 3px;
 
 		&:hover{
 			color: #888;
@@ -271,6 +275,7 @@ body {
 		max-width: 100%;
 		height: auto;
 		vertical-align: bottom;
+		border-radius: 2px;
 	}
 }
 
