--- a/assets/src/styles/variables.scss
+++ b/assets/src/styles/variables.scss
@@ -11,3 +11,7 @@ $respond-tiny: "screen and (max-width: 420px)";
 $respond-small: "screen and (min-width: 420px)";
 $respond-medium: "screen and (min-width: 700px)";
 $respond-large: "screen and (min-width: 1000px)";
+
+$body-image: "/assets/dist/gfx/polygons.jpg";
+$homepage-image: "/assets/dist/gfx/lake.jpg";
+// $homepage-image: "/assets/dist/gfx/corn.jpg";
