--- a/assets/src/styles/forms.scss
+++ b/assets/src/styles/forms.scss
@@ -4,6 +4,7 @@ form.standard{
 	.field{
 		margin: 0 0 $base-height;
 		overflow: hidden;
+		text-align: left;
 
 		label{
 			display: block;
@@ -44,7 +45,7 @@ form.standard{
 		font-size: .9em;
 		font-weight: bold;
 		padding: .3em .7em;
-		margin: .7em 0 0;
+		margin: 0;
 		background: #C95750;
 		color: #fff;
 		position: relative;
