--- a/assets/src/styles/normalise.scss
+++ b/assets/src/styles/normalise.scss
@@ -30,8 +30,8 @@ body {
 }
 
 h1, .h1 {
-    font-size: 2.6em;
-    font-weight: lighter;
+    font-size: 3em;
+    font-weight: 300;
 }
 
 h2, .h2{
