--- a/assets/views/track.html
+++ b/assets/views/track.html
@@ -8,6 +8,7 @@
 			    <a class="track-info" href="<%= track.url %>" title="View this track on Last.FM" target="_blank">
 			        <b class="trackname"><%= track.name %></b>
 			        <span class="trackartist"><%= track.artist %></span>
+			        <small class="nowplaying-<%= track.nowplaying %>"><%= track.timestamp %></small>
 			    </a>
 		    </div>
 		</li>
