Converting sass files to less, I just prefer less

--- a/assets/src/styles/ie8.less
+++ b/assets/src/styles/ie8.less
@@ -22,7 +22,7 @@ body {
 	display: block;
 	padding: 0;
 	margin: 0 .5em;
-	line-height: $logo-height-large;
+	line-height: @logo-height-large;
 }
 
 
