--- a/assets/src/styles/off-top.less
+++ b/assets/src/styles/off-top.less
@@ -2,12 +2,12 @@
 
 	.mast{
 		.row{
-			height: $logo-height-small;
+			height: @logo-height-small;
 		}
 	}
 
 	.nav1 a{
-		line-height: $logo-height-small;
+		line-height: @logo-height-small;
 	}
 
 	.intro .continue{
