--- a/assets/src/styles/forms.less
+++ b/assets/src/styles/forms.less
@@ -2,7 +2,7 @@ form.standard{
 	max-width: 700px;
 
 	.field{
-		margin: 0 0 $base-height;
+		margin: 0 0 @base-height;
 		overflow: hidden;
 		text-align: left;
 
@@ -21,7 +21,7 @@ form.standard{
 			padding: .5em;
 
 			&:focus{
-				border-color: $highlight;
+				border-color: @highlight;
 				outline: none;
 			}
 		}
@@ -63,7 +63,7 @@ form.standard{
 		left: 10%;
 	}
 }
-@media #{$respond-small}{
+@media @respond-small{
 	form.contact{
 		margin: 0 auto;
 		.field-contactname,
@@ -82,7 +82,7 @@ form.standard{
 
 form.search{
 	position: relative;
-	margin: 0 0 $base-height;
+	margin: 0 0 @base-height;
 	.input input{
 		padding-right: 100px;
 		height: 40px;
@@ -90,8 +90,7 @@ form.search{
 		padding-top: 5px;
 		padding-bottom: 5px;
 	}
-	input[type=submit]{
-		@extend .btn;
+	input[type=submit]:extend(.btn){
 		width: 100px;
 		height: 40px;
 		padding-top: 5px;
