--- a/assets/src/styles/helpers.less
+++ b/assets/src/styles/helpers.less
@@ -16,7 +16,7 @@
 .btn:hover,
 .btn:focus{
 	color: #fff;
-	background: $highlight;
+	background: @highlight;
 	cursor: pointer;
 	outline: none;
 }
@@ -27,7 +27,7 @@
 ul.display-list{
 	list-style: none;
 	padding: 0;
-	margin: 0 0 $base-height;
+	margin: 0 0 @base-height;
 	border-bottom: 1px solid #ddd;
 
 	li{
