--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -2,15 +2,15 @@ body {
 	background: #273036;
 	color: #ccc;
 	padding: 0;
-	background-image: url(#{$body-image});
+	background-image: url(@body-image);
 	background-position: center 0;
 
-	@media #{$respond-medium} {
-		padding-top: ($base-height + $logo-height-medium);
+	@media @respond-medium {
+		padding-top: (@base-height + @logo-height-medium);
 	}
 
-	@media #{$respond-large} {
-		padding-top: ($base-height + $logo-height-large);
+	@media @respond-large {
+		padding-top: (@base-height + @logo-height-large);
 	}
 }
 
@@ -20,7 +20,7 @@ body {
 .row {
 	max-width: 980px;
 	margin: auto;
-	padding: $base-height 1em;
+	padding: @base-height 1em;
 	overflow: hidden;
 }
 
@@ -28,10 +28,10 @@ body {
 	background: #273036;
 	background-position: 80% 0;
 	z-index: 100;
-	background-image: url(#{$body-image}); 
+	background-image: url(@body-image); 
 	background-position: center 0;
 
-	@media #{$respond-medium} {
+	@media @respond-medium {
 		position: fixed;
 		top: 0;
 		width: 100%;
@@ -43,12 +43,12 @@ body {
 		text-align: center;
 		overflow: hidden;
 		
-		@media #{$respond-tiny} {
+		@media @respond-tiny {
 			height: 2em;
 			margin: 1em 0;
 		}
 
-		@media #{$respond-small} {
+		@media @respond-small {
 			height: 100%;
 		}
 
@@ -59,7 +59,7 @@ body {
 			
 		}
 
-		@media #{$respond-small} {
+		@media @respond-small {
 			float: left;
 		}
 	}
@@ -69,25 +69,25 @@ body {
 		font-weight: lighter;
 	
 		&:hover{
-			color: $link-hover;
+			color: @link-hover;
 		}
 	}
 
 	.row {
-		padding: ($base-height/2) 1em;
+		padding: (@base-height/2) 1em;
 		height: auto;
 
-		@media #{$respond-small} {
-			height: $logo-height-small;
+		@media @respond-small {
+			height: @logo-height-small;
 		}
 
-		@media #{$respond-medium} {
+		@media @respond-medium {
 			transition: height .4s cubic-bezier(0.000, 0.535, 0.010, 1.005);
-			height: $logo-height-medium;
+			height: @logo-height-medium;
 		}
 
-		@media #{$respond-large} {
-			height: $logo-height-large;
+		@media @respond-large {
+			height: @logo-height-large;
 		}
 
 		h1 {
@@ -114,7 +114,7 @@ body {
 	Footer
 */
 .foot{
-	padding-top: $base-height/2;
+	padding-top: @base-height/2;
 	font-size: .9em;
 	text-align: center;
 	
@@ -126,7 +126,7 @@ body {
 
 	.copyright{
 		display: block;
-		margin-top: $base-height;
+		margin-top: @base-height;
 		font-style: italic;
 	}
 }
@@ -140,8 +140,8 @@ body {
 	position: relative;
 	transition: min-height 1s, padding-top 1s;
 
-	@media #{$respond-medium} {
-		background-image: url(#{$homepage-image});
+	@media @respond-medium {
+		background-image: url(@homepage-image);
 		background-position: center 40%;
 		background-size: cover;
 		color: #fff;
@@ -165,7 +165,7 @@ body {
 
 	}
 	
-	@media #{$respond-medium}{
+	@media @respond-medium{
 		@media screen and (min-height: 500px) {
 			min-height: 240px;
 			padding-top: 80px;
@@ -180,7 +180,7 @@ body {
 		}
 	}
 	.row{
-		@media #{$respond-tiny} {
+		@media @respond-tiny {
 			padding-top: 0;
 		}
 	}
@@ -245,7 +245,7 @@ body {
 	}
 
 	h2{
-		margin-bottom: ($base-height/2);
+		margin-bottom: (@base-height/2);
 		font-size: 1.1em;
 		color: #444;
 	}
@@ -282,7 +282,7 @@ body {
 				animation-fill-mode: backwards;
 			}
 		}
-		@media #{$respond-medium}{
+		@media @respond-medium{
 			padding: 1em 6%;
 		}
 	}
@@ -324,13 +324,13 @@ body {
 .page-about{
 	ul{
 		overflow: hidden;
-		margin: 0 0 $base-height;
+		margin: 0 0 @base-height;
 		padding: 0;
 
 		li{
 			list-style: none;
 			padding: .5em 0;
-			@media #{$respond-small} {
+			@media @respond-small {
 				width: 50%;
 				float: left;
 				border-bottom: 1px dashed #ccc;
@@ -376,7 +376,7 @@ body {
 */
 .music-tracks{
 	li{
-		@media #{$respond-medium}{
+		@media @respond-medium{
 			float: left;
 			width: 48%;
 			padding-right: 2%;
@@ -403,7 +403,7 @@ body {
 			}
 		}
 
-		@media #{$respond-medium}{
+		@media @respond-medium{
 			float: left;
 			width: 50%;
 			padding-right: 2%;
@@ -411,7 +411,7 @@ body {
 	}
 
 	.nowplaying-true{
-		color: $highlight;
+		color: @highlight;
 	}
 
 	.album-cover{
@@ -441,7 +441,7 @@ body {
 		}
 	}
 
-	@media #{$respond-tiny}{
+	@media @respond-tiny{
 		li{
 			padding-left: 90px;
 			min-height: 90px;
@@ -452,7 +452,7 @@ body {
 		}
 	}
 
-	@media #{$respond-large}{
+	@media @respond-large{
 		.icon{ opacity: 0; }
 		li:hover .icon{ opacity: 1; }
 	}
@@ -491,7 +491,7 @@ body {
 ul.sitemap{
 	border-top: 1px solid #ddd;
 	list-style: none;
-	padding: $base-height 0;
+	padding: @base-height 0;
 
 	li{
 		margin: 0 0 1em;
@@ -529,7 +529,7 @@ ul.sitemap{
 		}
 		small{
 			display: block;
-			color: invert($highlight);
+			color: invert(@highlight);
 			margin: 0;
 		}
 	}
@@ -538,7 +538,7 @@ ul.sitemap{
 .video-container{
 	padding-top: 56.22%;
 	position: relative;
-	margin-bottom: $base-height;
+	margin-bottom: @base-height;
 	
 	iframe{
 		position: absolute;
