--- a/assets/src/styles/off-top.less
+++ b/assets/src/styles/off-top.less
@@ -1,6 +1,8 @@
 .off-top{
 
 	.mast{
+		transform: translateZ(0);
+		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 		.row{
 			height: @logo-height-small;
 		}
