--- a/assets/src/styles/nav.less
+++ b/assets/src/styles/nav.less
@@ -11,7 +11,7 @@ nav a {
 	width: 100%;
 	padding: 0 0 0;
 
-	@media @respond-small {
+	@media @respond-medium {
 		float: right;
 		clear: none;
 		width: auto;
