--- a/assets/src/styles/normalise.less
+++ b/assets/src/styles/normalise.less
@@ -29,9 +29,18 @@ body {
     line-height: 1.5;
 }
 
+h1, h2, h3 {
+    font-weight: normal;
+}
+
 h1, .h1 {
     font-size: 3em;
     font-weight: 300;
+    margin: .4em 0 1.2em;
+    
+    @media @respond-medium {
+        margin: 1em 0 1.4em;
+    }
 }
 
 h2, .h2{
