--- a/assets/src/styles/off-top.less
+++ b/assets/src/styles/off-top.less
@@ -4,6 +4,7 @@
 		transform: translateZ(0);
 		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 		.row{
+			padding: (@base-height/2) 1em;
 			height: @logo-height-small;
 		}
 	}
