Small style fixes for subpage listings and search form

--- a/assets/src/styles/forms.less
+++ b/assets/src/styles/forms.less
@@ -82,7 +82,8 @@ form.standard{
 
 form.search{
 	position: relative;
-	margin: 0 0 @base-height;
+	margin: @base-height auto;
+
 	.input input{
 		padding-right: 100px;
 		height: 40px;
