Improving spacing on h1 element

--- a/assets/src/styles/normalise.less
+++ b/assets/src/styles/normalise.less
@@ -36,10 +36,10 @@ h1, h2, h3 {
 h1, .h1 {
     font-size: 3em;
     font-weight: 300;
-    margin: .4em 0 1.2em;
+    margin: .4em 0 .8em;
     
     @media @respond-medium {
-        margin: 1em 0 1.4em;
+        margin: 1em 0;
     }
 }
 
