Updating has-subpages template to use more generic class names

--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -479,13 +479,13 @@ body {
 /*
 	Words
 */
-.post-list {
+.subpages {
 	
-	.post {
+	.subpage {
 		overflow: hidden;
 	}
 
-	.post + .post{
+	.subpage + .subpage{
 		margin-top: 1em;
 		padding-top: 1em;
 		border-top: 1px dotted #999;
