--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -196,117 +196,109 @@ body {
 	padding: 0 3px 0; // Prevent hiding box-shadow on small screens
 }
 
-.project{
-	width: 100%;
-	max-width: 400px;
-	min-height: 140px;
-	float: none;
-	margin: 1em auto 0;
-	position: relative;
-	padding: 4px;
+.project {
 	box-sizing: border-box;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
-	background: #fff;
+	height: 11em;
+	padding: 1em;
 	border-radius: 4px;
+	position: relative;
+	border: 4px solid #fff;
+	text-align: center;
+	background: #2C3339;
+	color: #fff;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+	transition: background .2s;
 	overflow: hidden;
 
-	@media screen and (min-width: 550px){
+	@media @respond-medium {
 		width: 48%;
-		max-width: none;
 		margin: 1em 2% 1em 0;
 		float: left;
-
-		&:nth-child(2n){
-		  margin: 1em 0 1em 2%;
-		}
 	}
 
-	@media screen and (min-width: 800px){
+	@media @respond-large {
 		width: 30%;
-		max-width: none;
-		margin: 1em 1.5% 1em !important;
-		float: left;
-		&:nth-child(3n){
-			margin-right: 0;
-		}
-		&:nth-child(3n+2){
-			margin-left: 2% !important; 
-			margin-right: 2% !important; 
-		}
+		margin: 1em 1.5% 1em;
 	}
 
-	h2{
-		margin-bottom: (@base-height/2);
-		font-size: 1.1em;
-		color: #444;
+  a {
+    color: #fff;
+    text-decoration: none;
+    position: absolute;
+    left: 1em;
+    right: 1em;
+    transition: color .3s;
+  }
+  
+  h2 {
+  	font-size: 1.2em;
+    color: #F54121;
+    margin: .5em 0 0;
+
+    @media @respond-medium {
+    	transform: translate(0, 12px);
+    	transition: transform .3s ease-out;
 	}
-	p{
-		font-size: .85em;
+  }
+  
+  
+  .summary {
+  	margin: .5em 0 .6em;
+    font-size: .9em;
+    line-height: 1.3;
+
+    @media @respond-medium {
+	    transform: translate(0, 20px);
+	    opacity: 0;
+	    transition: opacity .2s, transform .35s;
+	    transition-delay: 0;
 	}
+  }
+  
+  
+  svg {
+    width: 40px;
+    height: 40px;
 
-	a{
-		position: absolute;
-		padding: 4%;
-		text-align: left;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background: #eee;
-		background: rgba(255, 255, 255, 0.95);
-		opacity: 0;
-		transition: opacity .3s;
-		border-radius: 3px;
-		
-		&:hover{
-			color: #888;
-			opacity: 1;
+    @media @respond-medium {
+		width: 50px;
+		height: 50px;
+    }
+    
+    display: block;
+    margin: .5em auto 0;
+    transition: all .4s;
+    transform-origin: 50% 0;
+    fill: #fff;
+  }
+  
 
-			h2,
-			p{
-				animation-name: fadeIn;
-				animation-duration: .4s;
-				animation-timing-function: cubic-bezier(0.175, 0.885, 0.475, 1.650);
-			}
-			p{
-				animation-delay: .2s;
-				animation-fill-mode: backwards;
-			}
-		}
-		@media @respond-medium{
-			padding: 1em 6%;
-		}
-	}
+  &:hover {
+    background: #eee;
+    
+    a {
+      color: #333;
+    }
 
-	img{
-		max-width: 100%;
-		height: auto;
-		vertical-align: bottom;
-		border-radius: 2px;
-	}
+    @media @respond-medium {
+	    
+	    h2 {
+	      transform: translate(0, -10px);
+	    }
+	    
+	    .summary {
+	      opacity: 1;
+	      transform: translate(0, -10px);
+	      transition-delay: .1s;
+	      transition-timing-function: cubic-bezier(0.640, -0.37, 0.13, 1.6);
+	    }
+    }
 
-	.icon{
-		width: 100%;
-		background: #333;
-		color: #f54121;
-		padding: 30px 0 40px;
-
-		h3{
-			margin: 0;
-		}
-	}
-
-	svg{
-		margin: 0 auto 1em;
-		width: auto;
-		height: 60px;
-		display: block;
-
-		path,
-		rect{
-			fill: #fff;
-		}
-	}
+    svg {
+      transform: scale(0.7);
+      fill: #333;
+    }
+  }
 }
 
 /*
