--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -598,3 +598,62 @@ blockquote{
 		font-family: serif;
 	}
 }
+
+.appreciate {
+  text-align: center;
+  padding-top: 1em;
+  
+  form {
+    margin: 0 auto;
+  }
+
+  .btn {
+  	background-color: #303B43;
+  	background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+  	transition: all .2s;
+  	transform: scale(1);
+  	position: relative;
+
+  	&:before {
+  		content: '';
+  		position: absolute;
+  		background: transparent;
+  		border-radius: 4px;
+  		left: 0;
+  		right: 0;
+  		top: 0;
+  		bottom: 0;
+  		z-index: -1;
+  		box-shadow: 0 0 0 @highlight;
+  		opacity: 1;
+  		transition: all .4s;
+  	}
+
+  	&.appreciated {
+  		background: #24292d;
+  		padding-right: 2.5em;
+  	}
+
+  	&.appreciated:before {
+  		transform: scale(2.5);
+  		background: @highlight;
+  		filter: blur(10px);
+  		opacity: 0;
+  	}
+
+  	&:after {
+  		content: '\2714';
+  		color: #21F59B;
+  		position: absolute;
+  		right: 1em;
+  		font-size: 0;
+  		opacity: 0;
+  		transition: all .3s;
+  	}
+
+  	&.appreciated:after {
+  		font-size: 1em;
+  		opacity: 1;
+  	}
+	}
+}
