--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -200,6 +200,7 @@ body {
 	box-sizing: border-box;
 	height: 11em;
 	padding: 1em;
+	margin-bottom: 1em;
 	border-radius: 4px;
 	position: relative;
 	border: 4px solid #fff;
@@ -212,7 +213,7 @@ body {
 
 	@media @respond-medium {
 		width: 48%;
-		margin: 1em 2% 1em 0;
+		margin: 1em 2% 0 0;
 		float: left;
 	}
 
@@ -225,12 +226,14 @@ body {
     color: #fff;
     text-decoration: none;
     position: absolute;
-    left: 1em;
-    right: 1em;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     transition: color .3s;
   }
   
-  h2 {
+  .project-title {
   	font-size: 1.2em;
     color: #F54121;
     margin: .5em 0 0;
@@ -240,9 +243,13 @@ body {
     	transition: transform .3s ease-out;
 	}
   }
+
+  .project-details {
+  	padding: 0 1em 1em;
+  }
   
   
-  .summary {
+  .project-summary {
   	margin: .5em 0 .6em;
     font-size: .9em;
     line-height: 1.3;
@@ -255,6 +262,9 @@ body {
 	}
   }
   
+  .project-icon {
+  	padding-top: 1em;
+  }
   
   svg {
     width: 40px;
@@ -275,10 +285,6 @@ body {
 
   &:hover {
     background: #eee;
-    
-    a {
-      color: #333;
-    }
 
     @media @respond-medium {
 	    
@@ -286,7 +292,8 @@ body {
 	      transform: translate(0, -10px);
 	    }
 	    
-	    .summary {
+	    .project-summary {
+	      color: #333;
 	      opacity: 1;
 	      transform: translate(0, -10px);
 	      transition-delay: .1s;
