--- a/assets/src/styles/normalise.less
+++ b/assets/src/styles/normalise.less
@@ -128,12 +128,13 @@ a {
  */
 
 a:active,
-a:hover {
+a:hover,
+a:focus {
     outline: 0;
     color: @link-hover;
 }
 
-a:focus{
+a:focus img{
     outline: 1px dashed @highlight;
 }
 
