--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -26,7 +26,7 @@ body {
 
 .mast{
 	background: #273036;
-	background-image: url(@body-image); 
+	background-image: url(@body-image);
 	background-position: 80% 0;
 	z-index: 100;
 	background-position: center 0;
@@ -606,61 +606,101 @@ blockquote{
 	}
 }
 
+figure.video {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+	margin: 0 auto @base-height;
+
+	iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
 .appreciate {
-  text-align: center;
-  padding-top: 1em;
-  
-  form {
-    margin: 0 auto;
-  }
+	text-align: center;
+	padding-top: 1em;
 
-  .btn {
-  	background-color: #303B43;
-  	background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
-  	transition: all .2s;
-  	transform: scale(1);
-  	position: relative;
+	form {
+		margin: 0 auto;
+	}
 
-  	&:before {
-  		content: '';
-  		position: absolute;
-  		background: transparent;
-  		border-radius: 4px;
-  		left: 0;
-  		right: 0;
-  		top: 0;
-  		bottom: 0;
-  		z-index: -1;
-  		box-shadow: 0 0 0 @highlight;
-  		opacity: 1;
-  		transition: all .4s;
-  	}
+	.btn--appreciate {
+		white-space: nowrap;
+		text-align: center;
+		color: #05BD70;
+		border-color: #05BD70;
+		background-color: transparent;
+		transition: 
+			border-radius .5s .1s, 
+			background-color .5s, 
+			border-color .5s,
+			color .5s,
+			padding .5s cubic-bezier(.37, -1, .6, 1);
+		
+		&:before {
+			margin-left: -.4em;
+			margin-right: .7em;
+			transition: all .2s;
+			color: #FF6154;
+		}
 
-  	&.appreciated {
-  		background: #24292d;
-  		padding-right: 2.5em;
-  	}
+		&:after {
+			position: absolute;
+			content: '\ea10';
+			left: 0;
+			width: 100%;
+			opacity: 0;
+			transition: opacity .2s;
+		}
 
-  	&.appreciated:before {
-  		transform: scale(2.5);
-  		background: @highlight;
-  		filter: blur(10px);
-  		opacity: 0;
-  	}
+		&:hover {
+			background: none;
+			color: #05BD70;
 
-  	&:after {
-  		content: '\2714';
-  		color: #21F59B;
-  		position: absolute;
-  		right: 1em;
-  		font-size: 0;
-  		opacity: 0;
-  		transition: all .3s;
-  	}
+			&:before {
+				transform: scale(1.5);
+			}
+		}
+		
+		&.appreciated {
+			border-radius: 30px;
+			padding: .7em 0 .8em;
+			background-color: #05BD70;
+			color: #05BD70;
+			
+			&:before {
+				font-size: 0;
+			}
 
-  	&.appreciated:after {
-  		font-size: 1em;
-  		opacity: 1;
-  	}
+			&:after {
+				transition-delay: .5s;
+				opacity: 1;
+				color: #fff;
+			}
+		}
+	}
+
+	.btn--appreciated {
+		color: #777;
+		border-color: #777;
+		background-color: transparent;
+
+		&:before {
+			margin-left: -.4em;
+			margin-right: .7em;
+			transition: all .2s;
+			color: #05BD70;
+		}
+
+		&:hover {
+			background: none;
+			color: inherit;
+		}
 	}
 }
