Changing the texture on body, header and projects

--- a/assets/src/styles/variables.less
+++ b/assets/src/styles/variables.less
@@ -12,5 +12,8 @@
 @respond-medium: ~"screen and (min-width: 640px)";
 @respond-large: ~"screen and (min-width: 1000px)";
 
-@body-image: ~"/assets/dist/gfx/polygons.jpg";
+@body-image: ~"/assets/dist/gfx/primary-texture.jpg";
 @homepage-image: ~"/assets/dist/gfx/lake.jpg";
+
+@primary-texture: url(/assets/dist/gfx/primary-texture.jpg) #273036;
+@secondary-texture: url(/assets/dist/gfx/secondary-texture.jpg) #31383c;
