--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -1,8 +1,7 @@
 body {
-	background: #273036;
 	color: #ccc;
 	padding: 0;
-	background-image: url(@body-image);
+	background: @primary-texture;
 	background-position: center 0;
 
 	@media @respond-medium {
@@ -25,8 +24,7 @@ body {
 }
 
 .mast{
-	background: #273036;
-	background-image: url(@body-image);
+	background: @primary-texture;
 	background-position: 80% 0;
 	z-index: 100;
 	background-position: center 0;
@@ -53,7 +51,6 @@ body {
 		img, svg{
 			width: auto;
 			height: 100%;
-			float: left;
 		}
 	}
 
@@ -205,7 +202,7 @@ body {
 	position: relative;
 	border: 4px solid #fff;
 	text-align: center;
-	background: #2C3339;
+	background: @secondary-texture;
 	color: #fff;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 	transition: background .2s;
