--- a/assets/src/styles/fonts.less
+++ b/assets/src/styles/fonts.less
@@ -23,6 +23,10 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+	content: "\e986";
+}
+
 .icon-heart:before {
 	content: "\e9da";
 }
@@ -57,6 +61,14 @@
 
 .icon-arrow-left:before {
 	content: "\ea38";
+}
+
+.icon-circle-right:before {
+	content: "\ea42";
+}
+
+.icon-circle-left:before {
+	content: "\ea44";
 }
 
 .icon-instagram:before {
