--- a/assets/src/styles/nav.less
+++ b/assets/src/styles/nav.less
@@ -44,17 +44,11 @@ nav a {
 	text-align: center;
 	margin-bottom: @base-height;
 
-	a{
-		background: #fff;
-		background: linear-gradient(top, #fff, #f5f5f5);
-		border-radius: 3px;
-		padding: 3px 10px;
-		border: 1px solid #d9d9d9;
-		border-top-color: #eee;
-		border-bottom-color: #ccc;
-		box-shadow: 0 3px 5px rgba(0, 0, 0, 0.14);
-		text-decoration: none;
-		margin: 0 .5em;
-		display: inline-block;
+	a:extend(.btn all){
+		span {
+			overflow: hidden;
+			position: absolute;
+			left: -999px;
+		}	
 	}
 }
