Reformatting colors in less

--- a/assets/src/styles/helpers.less
+++ b/assets/src/styles/helpers.less
@@ -19,7 +19,7 @@
 .btn:hover,
 .btn:focus {
 	outline: none;
-	background-color: #05BD70;
+	color: @color-secondary;
 }
 .btn[disabled]{
 	opacity: .3;
