--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -268,7 +268,7 @@ body {
   
   .project-title {
   	font-size: 1.2em;
-    color: #F54121;
+    color: @color-primary;
     margin: .5em 0 0;
 
     @media @respond-medium {
@@ -434,7 +434,7 @@ body {
 	}
 
 	.nowplaying-true{
-		color: @highlight;
+		color: @color-secondary;
 	}
 
 	.album-cover{
@@ -592,7 +592,7 @@ ul.sitemap{
 		}
 		small{
 			display: block;
-			color: invert(@highlight);
+			color: #999;
 			margin: 0;
 		}
 	}
