--- a/assets/src/styles/normalise.less
+++ b/assets/src/styles/normalise.less
@@ -105,7 +105,7 @@ template {
 }
 
 ::selection{
-    background: lighten(@highlight, 10%);
+    background: lighten(@color-secondary, 10%);
     color: #fff;
     text-shadow: none;
 }
@@ -135,7 +135,7 @@ a:focus {
 }
 
 a:focus img{
-    outline: 1px dashed @highlight;
+    outline: 1px dashed @color-secondary;
 }
 
 /* Text-level semantics
