--- a/assets/src/styles/variables.less
+++ b/assets/src/styles/variables.less
@@ -1,8 +1,10 @@
 @base-font-size: 16px;
 @base-height: @base-font-size * 1.5;
 
-@highlight: #f54121;
-@link-hover: @highlight;
+@color-primary: #f54121;
+@color-secondary: spin(#f54121, 25);
+
+@link-hover: @color-secondary;
 @logo-height-small: 30px;
 @logo-height-medium: 45px;
 @logo-height-large: 60px;
