--- a/assets/src/styles/forms.less
+++ b/assets/src/styles/forms.less
@@ -20,8 +20,8 @@ form.standard{
 			padding: .5em;
 
 			&:focus{
-				border-color: @highlight;
-				box-shadow: 0 0 0 2px fadeout(desaturate(@highlight, 20%), 60%);
+				border-color: @color-secondary;
+				box-shadow: 0 0 0 2px fadeout(desaturate(@color-secondary, 20%), 60%);
 				outline: none;
 			}
 		}
@@ -91,7 +91,7 @@ form.search{
 		padding-top: 5px;
 		padding-bottom: 5px;
 	}
-	input[type=submit]:extend(.btn){
+	input[type=submit]:extend(.btn all){
 		width: 100px;
 		height: 40px;
 		padding-top: 5px;
