--- a/assets/src/styles/fonts.less
+++ b/assets/src/styles/fonts.less
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Lato|Open+Sans:300);
+
 @font-face {
 	font-family: 'icomoon';
 	src:url('/assets/fonts/icomoon.eot?-8l6mcz');
