--- a/assets/src/styles/main.less
+++ b/assets/src/styles/main.less
@@ -3,6 +3,8 @@ body {
 	padding: 0;
 	background: @primary-texture;
 	background-position: center 0;
+	background-attachment: fixed;
+	font-family: @base-font-family;
 
 	@media @respond-medium {
 		padding-top: (@base-height + @logo-height-medium);
@@ -67,10 +69,6 @@ body {
 		padding: (@base-height) 1em;
 		height: auto;
 
-		@media @respond-small {
-			//height: @logo-height-small;
-		}
-
 		@media @respond-medium {
 			transition: all .4s;
 			height: @logo-height-medium;
@@ -125,7 +123,8 @@ body {
 }
 
 .main{
-	background: #eee;
+	background: @tertiary-texture;
+	background-attachment: fixed;
 	color: #444;
 	h1{
 		text-align: center;
@@ -165,11 +164,9 @@ body {
 	text-align: center;
 	position: relative;
 	transition: min-height 1s, padding-top 1s;
+	font-size: 1.2em;
 
 	@media @respond-medium {
-		background-image: url(@homepage-image);
-		background-position: center 40%;
-		background-size: cover;
 		color: #fff;
 
 		h1, p{
@@ -180,13 +177,12 @@ body {
 
 		h1{
 			animation-duration: 1.5s;
-			animation-delay: .5s;
 			margin-top: 0;
 		}
 
 		p{
 			animation-duration: 1.2s;
-			animation-delay: .8s;	
+			animation-delay: .2s;	
 		}
 	}
 	
@@ -196,11 +192,7 @@ body {
 	}
 	@media @respond-medium and (min-height: 800px) {
 		min-height: 380px;
-		padding-top: 170px;
-	}
-	@media @respond-medium and (min-height: 1200px) {
-		min-height: 450px;
-		padding-top: 210px;
+		padding-top: 110px;
 	}
 	
 	.row {
@@ -210,136 +202,12 @@ body {
 	}
 }
 
-/*
-	Home
-*/
 .template-home{
 	.row > h2{
 		text-align: center;
 	}
 }
 
-/*
-	Projects
-*/
-.projects{
-	overflow: hidden;
-	margin: auto;
-	text-align: center;
-	padding: 0 3px 0; // Prevent hiding box-shadow on small screens
-}
-
-.project {
-	box-sizing: border-box;
-	height: 11em;
-	padding: 1em;
-	margin-bottom: 1em;
-	border-radius: 4px;
-	position: relative;
-	border: 4px solid #fff;
-	text-align: center;
-	background: @secondary-texture;
-	color: #fff;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
-	transition: background .2s;
-	overflow: hidden;
-
-	@media @respond-medium {
-		width: 48%;
-		margin: 1em 2% 0 0;
-		float: left;
-	}
-
-	@media @respond-large {
-		width: 30%;
-		margin: 1em 1.5% 1em;
-	}
-
-  a {
-    color: #fff;
-    text-decoration: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    transition: color .3s;
-  }
-  
-  .project-title {
-  	font-size: 1.2em;
-    color: @color-primary;
-    margin: .5em 0 0;
-
-    @media @respond-medium {
-    	transform: translate(0, 12px);
-    	transition: transform .3s ease-out;
-	}
-  }
-
-  .project-details {
-  	padding: 0 1em 1em;
-  }
-  
-  
-  .project-summary {
-  	margin: .5em 0 .6em;
-    font-size: .9em;
-    line-height: 1.3;
-
-    @media @respond-medium {
-	    transform: translate(0, 20px);
-	    opacity: 0;
-	    transition: opacity .2s, transform .35s;
-	    transition-delay: 0;
-	}
-  }
-  
-  .project-icon {
-  	padding-top: 1em;
-  }
-  
-  svg {
-    width: 40px;
-    height: 40px;
-
-    @media @respond-medium {
-		width: 50px;
-		height: 50px;
-    }
-    
-    display: block;
-    margin: .5em auto 0;
-    transition: all .4s;
-    transform-origin: 50% 0;
-    fill: #fff;
-  }
-  
-
-  &:hover {
-    background: #eee;
-
-    @media @respond-medium {
-	    
-	    h2 {
-	      transform: translate(0, -10px);
-	    }
-	    
-	    .project-summary {
-	      color: #333;
-	      opacity: 1;
-	      transform: translate(0, -10px);
-	      transition-delay: .1s;
-	      transition-timing-function: cubic-bezier(0.640, -0.37, 0.13, 1.6);
-	    }
-    }
-
-    svg {
-      transform: scale(0.7);
-      fill: #333;
-    }
-  }
-}
 
 /*
 	About
@@ -366,14 +234,10 @@ body {
 		}
 		
 		li:before{
-			content: '\1804';
+			content: '-';
 			margin-right: 1em;
 			color: @color-primary;
 		}
-	}
-
-	.main.experience{
-		background: #ddd;
 	}
 }
 
