--- a/assets/src/styles/normalise.less
+++ b/assets/src/styles/normalise.less
@@ -25,7 +25,6 @@ html {
 body {
     margin: 0;
     font-size: @base-font-size;
-    font-family: Lato, "Gill sans", sans-serif;
     line-height: 1.5;
 }
 
@@ -33,9 +32,12 @@ h1, h2, h3 {
     font-weight: normal;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: @headings-font-family;
+}
+
 h1, .h1 {
     font-size: 3em;
-    font-weight: 300;
     margin: .4em 0 .8em;
     
     @media @respond-medium {
