--- a/assets/src/styles/variables.less
+++ b/assets/src/styles/variables.less
@@ -1,10 +1,13 @@
-@base-font-size: 16px;
+@base-font-size: 17px;
 @base-height: @base-font-size * 1.5;
+
+@base-font-family: 'Lato', serif;
+@headings-font-family: 'Open Sans', 'Gill sans', sans-serif;
 
 @color-primary: #f54121;
 @color-secondary: spin(#f54121, 25);
 
-@link-hover: @color-secondary;
+@link-hover: @color-primary;
 @logo-height-small: 30px;
 @logo-height-medium: 45px;
 @logo-height-large: 60px;
@@ -15,7 +18,8 @@
 @respond-large: ~"screen and (min-width: 1000px)";
 
 @body-image: ~"/assets/dist/gfx/primary-texture.jpg";
-@homepage-image: ~"/assets/dist/gfx/lake.jpg";
+@homepage-image: ~"/assets/dist/gfx/corn.jpg";
 
 @primary-texture: url(/assets/dist/gfx/primary-texture.jpg) #273036;
 @secondary-texture: url(/assets/dist/gfx/secondary-texture.jpg) #31383c;
+@tertiary-texture: url(/assets/dist/gfx/white-plaster.png) #eee;
