--- a/assets/src/styles/normalise.less
+++ b/assets/src/styles/normalise.less
@@ -37,16 +37,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1, .h1 {
-    font-size: 3em;
-    margin: .4em 0 .8em;
-    
+    font-size: 2.4em;
+    margin: .4em 0 .6em;
+
     @media @respond-medium {
-        margin: 1em 0;
+        margin: 1em 0 1.2em;
+        font-size: 3em;
     }
 }
 
 h2, .h2{
-    font-size: 1.9em;
+    font-size: 1.7em;
+
+    @media @respond-medium {
+        font-size: 2.3em;
+    }
 }
 
 /* HTML5 display definitions
