--- a/assets/src/styles/nav.less
+++ b/assets/src/styles/nav.less
@@ -9,7 +9,7 @@ nav a {
 	clear:both;
 	text-align: center;
 	width: 100%;
-	padding: 0 0 0;
+	padding: 0;
 	font-family: @headings-font-family;
 	
 	@media @respond-medium {
@@ -22,7 +22,7 @@ nav a {
 	}
 
 	a{
-		padding: .5em;
+		padding: 0 .4em;
 		transition: color .2s, line-height .2s;
 		line-height: @logo-height-small;
 
