--- a/assets/src/styles/off-top.less
+++ b/assets/src/styles/off-top.less
@@ -3,6 +3,10 @@
 	.mast{
 		transform: translateZ(0);
 		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+		
+		&:before {
+			opacity: 1;
+		}
 
 		.row{
 			padding: (@base-height/2) 1em;
