Updating colors and logo

--- a/assets/src/styles/variables.less
+++ b/assets/src/styles/variables.less
@@ -4,7 +4,7 @@
 @base-font-family: 'Lato', serif;
 @headings-font-family: 'Open Sans', 'Gill sans', sans-serif;
 
-@color-primary: #f54121;
+@color-primary: #53c3ee;
 @color-secondary: spin(#f54121, 25);
 
 @link-hover: @color-primary;
